[package]
name = "microcosm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11" , features = ["dynamic_linking"] }
bevy_app = "0.11"
bevy_quinnet = "0.5.0"
bevy_rapier2d = { version = "0.22.0", features = [ "parallel"] }#, features = [ "parallel", "debug-render-2d"]}
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.183"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = 'thin'
opt-level = 3 #'s'

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[[bin]]
name = "standalone"
path = "src/standalone.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
